@@ -1,4 +1,7 @@
-2004-10-18	blytkerchan	obsolete C++ hash implementation
+2004-10-18	blytkerchan	remove references to C++ hash implementation
+	* module.mk: remove anything related to the C++ hash implementation
+
+obsolete C++ hash implementation
 	* Hash.7.pod: remove
 	* Hash.cc: ditto
 	* Hash.h: ditto
